Minor layout issues

--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -13,7 +13,8 @@ h1.title, h1.subtitle {
 
 h1.title {
   line-height: 0.9em;
-  margin-bottom: 20px;
+  margin-top: 20px;
+  margin-bottom: 30px;
 }
 
 h1.title small {
@@ -67,6 +68,7 @@ h1.title small {
 
 .footer__lang {
   text-align: right;
+  padding-right: 0;
 }
 
 .flag-icon-ru {
